<resources>
    <string name="app_name">Social Project</string>
    <string name="no_internet">No Internet Available</string>
    <string name="alert_description">Alert</string>
    <string name="dash">-</string>
    <string name="alert_text">Alert</string>
    <string name="ok_text">OK</string>

    <string name="connection_time_out" translatable="false">Connection Time out</string>
    <string name="error_msg">Empty or invalid string</string>
    <string name="select_customer">"Customer List"</string>
    <string name="workflow">"WorkFlow "</string>
    <string name="ApprovalRemarks">Review and Approval before Execution</string>
    <string name="enter_your_string">Enter your word</string>
    <string name="search_text">Search</string>
    <string name="submit_text">Submit</string>
    <string name="enter_remarks">Enter remarks</string>
    <string name="no_search_found">No Search Found</string>
    <string name="try_adjusting_your_filters">Search using a proper reference</string>
    <string name="stage_info">Stage Info</string>
    <string name="Remarks">Remarks</string>
    <string name="approvedby">Approved By</string>
    <string name="tag_one">#2023</string>
    <string name="tag_two">#TODAYISMONDAY</string>
    <string name="tag_three">#TOP</string>
    <string name="tag_four">#POPS!</string>
    <string name="tag_five">#WOW</string>
    <string name="tag_six">#ROW</string>
    <string name="main_title">자유톡</string>
    <string name="profile_section_heading">안녕 나 응애 </string>
    <string name="sub_comment">ㅇㅅㅇ</string>
    <string name="sub_comment_tag">1일전</string>
    <string name="message_section_hint">댓글을 남겨주세요.</string>
    <string name="message_section_right_hint">등록</string>
    <string name="profile_section_cm_value">165cm . 53kg</string>
    <string name="profile_section_next_value">1일전</string>
    <string name="heart_value">5</string>
    <string name="comment_value">5</string>
    <string name="profile_section_next_green_value">팔로우</string>
    <string name="profile_section_title_message">지난 월요일에 했던 이벤트 중 가장 괜찮은 상품 뭐야?</string>
    <string name="sub_comment_section_message">오 대박! 라이브 리뷰 오늘 올라온대요? 챙겨봐야겠다</string>
    <string name="comment_section_message">어머 제가 있던 테이블이 제일 반응이 좋았나보네요🤭
우짤래미님도 아시겠지만 저도 일반인 몸매 그 이상도 이하도아니잖아요?! 그런 제가 기꺼이 도전해봤는데 생각보다
괜찮았어요! 오늘 중으로 라이브 리뷰 올라온다고 하니
꼭 봐주세용~!</string>
    <string name="profile_section_description_message">지난 월요일에 2023년 S/S 트렌드 알아보기 이벤트 참석했던 팝들아~혹시 어떤 상품이 제일 괜찮았어?

후기 올라오는거 보면 로우라이즈? 그게 제일 반응 좋고 그 테이블이제일 재밌었다던데 맞아???

올해 로우라이즈가 트렌드라길래 나도 도전해보고 싶은데 말라깽이가아닌 사람들도 잘 어울릴지 너무너무 궁금해ㅜㅜ로우라이즈 테이블에있었던 팝들 있으면 어땠는지 후기 좀 공유해주라~~!</string>

</resources>